--- a/readme
+++ b/readme
@@ -21,4 +21,10 @@
 - Toggle
 
 ## Different Todo:
+- Better management of widgets
+- Querying for wdigets
+- Extends the depths of what i have currently
+- Custom handlers for when item is removed/added from hbox, vbox.
+- Custom handler for when layout is changed  
+- Shadows
 - Animation Support?
