--- a/assets/todo
+++ b/assets/todo
@@ -16,11 +16,11 @@
 - Scaling
 - Rotation
 - HFracBox (fraction box)
+- Dynamic addition to HFracBox
+- VFracBox (fraction box)
 
 ## Todo:
-- Dynamic addition to HFracBox
 - Grid
-- VFracBox (fraction box)
 - Image / Video
 - Tabs
 - Slider
@@ -31,6 +31,9 @@
 - ProgressBar
 - Input
 - Stack (widgets on top of each other)
+- Draggable
+- DraggableList
+- Drag and Drop Area
 - Shapes
 - Animated Sprite
 
